<resources>
    <string name="app_name">GitHub Users</string>

    <string name="txt_repositories">Repositories</string>
    <string name="txt_followers">Followers</string>
    <string name="txt_following">Following</string>
    <string name="txt_share">Share</string>
    <string name="txt_share_to">Share GitHub User Profile to …</string>
    <string name="txt_title_detail">Detail GitHub User</string>
    <string name="txt_search">Search</string>
    <string name="txt_type_the_username">Type the Username</string>

    <string name="content_img_company">Image For Icon Company</string>
    <string name="content_img_location">Image For Icon Location</string>
    <string name="content_img_repositories">Image For Icon Repositories</string>
    <string name="content_img_follow">Image For Icon Followers And Following</string>
    <string name="content_img_search_icon">Image Icon Search Person For Clue Using App</string>

    <string name="transition_name_avatar">profile_avatar</string>
    <string name="transition_name_username">profile_username</string>
    <string name="transition_name_company">profile_company</string>
    <string name="txt_search_progress">Please wait! Looking For</string>
    <string name="txt_dialog_information">GitHub users will show up after using\nSearch Person Menu</string>
    <string name="content_button_favorite">Button Favorite</string>
    <string name="txt_dialog_information_favorite">No user is the Favorite.\n\nGo to Detail GitHub User Page,\nuse the love button to add users here.</string>
    <string name="content_img_icon_favorite">Image Icon Favorite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_last_search_result">Search Result</string>
    <string name="txt_favorite_users">Favorite Users</string>
    <string name="content_image_change_theme">Image For Change Theme Mode</string>
</resources>